@@ -265,7 +265,7 @@
   <h2><b><a name="Features">Features</a></b></h2>
 
   <ul>
-    <li>High speed emulation using optimized C++17 code</li>
+    <li>High speed emulation using optimized C++20 code</li>
     <li>Supports high quality TIA emulation using the cycle-exact TIA core from
       <a href="https://github.com/6502ts/6502.ts">6502.ts</a> by
       Christian Speckner</li>
@@ -359,7 +359,7 @@
     <li>i386 or x86_64 class machine, with 32 or 64-bit distribution</li>
     <li>Other architectures (MIPS, PPC, PPC64, etc.) have been confirmed to work,
       but aren't as well tested as i386/x86_64</li>
-    <li>GNU g++ v/7 or Clang v/5 (with C++17 support) and the make utility are required for compiling the Stella source code</li>
+    <li>GNU g++ v/11 or Clang v/10 (with C++20 support) and the make utility are required for compiling the Stella source code</li>
   </ul>
 
   <p>
